[package]
name = "log-etw"
description = "Send log messages to ETW or user_events"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.69"
authors = ["Kyle Sabo", "Microsoft"]

[lib]

[dependencies]
log = {version="0.4", features=["std"]}
crossbeam-utils = "0.8"
lazy_static = "1.4"
chrono = {version="0.4", default-features = false, features=["std"]}
tracelogging = ">= 1.1.0"
tracelogging_dynamic = ">= 1.1.0"
eventheader = "0.2"
eventheader_dynamic = "0.2"
