[package]
name = "log-etw"
description = "Send log messages to ETW or user_events"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.69"
authors = ["Kyle Sabo", "Microsoft"]

[lib]
crate-type = ["rlib"]

[features]
json = ["dep:serde", "dep:serde_json"]
spans = ["dep:opentelemetry_api"]
kv_unstable = ["log/kv_unstable"]
kv_unstable_json = ["log/kv_unstable_serde", "json"]
default = []

[dependencies]
log = {version="0.4", features=["std"]}
crossbeam-utils = "0.8"
lazy_static = "1.4"
chrono = {version="0.4", default-features = false, features=["std"]}
tracelogging = ">= 1.1.0"
tracelogging_dynamic = ">= 1.1.0"
eventheader = "0.2"
eventheader_dynamic = "0.2"
opentelemetry_api = {version="0.19", default-features=false, optional=true, features=["trace"]}
serde = {version = "1.0", optional=true}
serde_json = {version="1.0", optional=true}
